fix: navbar height incorrect on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ body.nav-active {
   right: -350px;
   max-width: 350px;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   padding: 30px 16px;
   display: flex;
   flex-direction: column;
